--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,50 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import './styles/font.css';
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
+@layer base {
   :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+    /* Dimensions */
+    --dimension-xs: 8px;
+    --dimension-s: 12px;
+    --dimension-m: 16px;
+    --dimension-l: 20px;
+    --dimension-radius-input: 12px;
+
+    /* Typography */
+    --font-label-m-size: 16px;
+    --font-label-m-weight: 500;
+    --font-label-m-line-height: 22px;
+    --font-label-m-letter-spc: 0.16px;
+
+    --font-label-s-size: 14px;
+    --font-label-s-weight: 500;
+    --font-label-s-line-height: 17px;
+    --font-label-s-letter-spc: 0.16px;
+
+    --font-body-m-size: 16px;
+    --font-body-m-weight: 400;
+    --font-body-m-line-height: 22px;
+    --font-body-m-letter-spc: 0.1px;
+
+    /* Colors */
+    --color-surface-x-high: #8c8c9a;
+    --color-surface-x-low: #ffffff;
+    --color-surface-brand: #0050ff;
+    --color-surface-danger: #dc2828;
+    --color-surface-danger-variant: #ffdcdc;
+    --color-surface-warning: #a56315;
+    --color-surface-warning-variant: #faf1b6;
+
+    --color-content-on-neutral-xx-high: #2c2c31;
+    --color-content-on-neutral-medium: #8c8c9a;
+    --color-content-on-neutral-low: #c9c9ce;
+    --color-content-on-neutral-danger: #dc2828;
+    --color-content-on-neutral-warning: #a56315;
+
+    --color-state-default-hover: rgba(26, 26, 26, 0.06);
+    --color-state-default-focus: rgba(26, 26, 26, 0.8);
   }
 }
