font and practical examples added

--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -1,4 +1,7 @@
-
-/* @font-face {
-    TODO
-  } */
+@font-face {
+  font-family: 'On Air Var';
+  src: url('https://www.o2static.sk/o/eportal-liferaytheme/foundation/fonts/OnAirVar.woff2') format('woff2');
+  font-weight: 100 900; 
+  font-style: normal;
+  font-display: swap;
+}
